fix spacing

--- a/room_view/static/css/index.css
+++ b/room_view/static/css/index.css
@@ -33,8 +33,3 @@
     left: 100%;
     margin-left: 15px;
 }
-
-.collapse {
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
